# JNIExercise

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/administrator/jniresrevedemo/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/administrator/reverse/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JniDemo.cpp  bean.cpp  jni_common.cpp  jni_common.h  native-lib.cpp
app/src/main/cpp/subdir/: second.cpp
app/src/main/java/com/bean/: Movie.java  MyInterface.java  MyInterfaceImpl.java  Person.java  Quick.java
app/src/main/java/com/example/administrator/jniresrevedemo/: MainActivity.java
app/src/main/java/com/example/administrator/reverse/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/administrator/jniresrevedemo/: ExampleUnitTest.java
app/src/test/java/com/example/administrator/reverse/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
